grammar.js
        source_file: ($) => repeat($._module),

        // Can statement-ise anything so we'll use this as top-level.
        // _statement: ($) => choice($._expression_statement, $._declaration_statement),
        // _expression_statement: ($) => seq($._expression, ';'),
        _module: ($) => choice($._top_level_item),

        // Noirc: Module -- Since doc comments can appear anywhere, Module is Item which is ItemKind.
        _top_level_item: ($) => choice(
            $.attribute_item,
            $.use_item,
            $.module_or_contract_item,
            $.struct_item,
            // TODO: Relink impl.
            $.trait_item,
            $.global_item,
            // TODO: TypeAlias.
            //r("function")>>,
        ),

        item_list: ($) => seq(
            '{',
            repeat($._top_level_item),
            '}',
        ),

        // * * * * * * * * * * * * * * * * * * * * * * * * * DECLARATIONS / DEFINITIONS / ITEMS
        
        // [[file:noir_grammar.org::item_visibility]]
        visibility_modifier: $ => seq('pub', optional('(crate)')),
        
        // [[file:noir_grammar.org::visibility]]
        attribute_item: $ => seq(
            '#',
            optional('!'), // Marks InnerAttribute.
            '[',
            optional("'"), // Marks attribute as having a tag
            alias($.attribute_content, $.content),
            ']',
        ),
        // [[file:noir_grammar.org::attribute_content]]
        use_item: $ => seq(
            optional($.visibility_modifier),
            'use',
            field('decl', $.__use_variants),
            ';',
        ),
        // [[file:noir_grammar.org::use_variants]]
        __use_variants: $ => choice(
            $.identifier,
            $.use_list,
            alias($.__use_variants_scoped, $.path),
        ),
        // [[file:noir_grammar.org::use_variants_scoped]]
        use_list: $ => seq(
            '{',
            sepBy($.__use_variants, ','),
            optional(','),
            '}',
        ),
        
        // [[file:noir_grammar.org::mod_or_contract]]
        module_or_contract_item: $ => seq(
            optional($.visibility_modifier),
            choice('mod', 'contract'), // TODO: Discriminate kind into a field?
            field('name', $.identifier),
            choice(
                ';',
                field('body', $.item_list),
            ),
        ),
        
        // [[file:noir_grammar.org::struct]]
        struct_item: $ => seq(
            optional($.visibility_modifier),
            'struct',
            field('name', $.identifier),
            field('type_parameters', optional($._generic_parameters)),
            choice(
                field('body', $.struct_field_list), // TODO: If this is similar to others, e.g. Impl or Enum we can reduce it to one.
                ';', // Empty struct.
            ),
        ),
        // [[file:noir_grammar.org::struct_field]]
        struct_field_item: $ => seq(
            // OuterDocComments are extras.
            optional($.visibility_modifier),
            field('name', $.identifier),
            ':',
            field('type', $._type),
        ),
        // [[file:noir_grammar.org::struct_field_list]]
        struct_field_list: $ => seq(
            '{',
            sepBy($.struct_field_item, ','),
            optional(','),
            '}',
        ),
        
        // [[file:noir_grammar.org::impl]]
        impl_item: $ => seq(
            'impl',
            // TODO: Generics
            // TODO: Path
        
            // TODO: Choice between TypeImpl or TraitImpl
            // $.trait_impl,
            $.trait_impl,
        ),
        // [[file:noir_grammar.org::trait_impl]]
        trait_item: $ => seq(
            optional($.visibility_modifier),
            'trait',
            field('name', $.identifier),
            field('type_parameters', optional($._generic_parameters)),
            field('bounds', optional($.trait_bounds)),
            optional($.where_clause),
            field('body', alias($.__trait_declaration_list, $.declaration_list)),
        ),
        // [[file:noir_grammar.org::trait_bounds]]
        trait_bounds: $ => seq(
            ':', // Common prefix reduction.
            sepBy1($.__trait_bound, '+'),
            // optional('+'), // TODO: I think not allowed, test compiler methods post-grammar.
        ),
        // [[file:noir_grammar.org::trait_bound]]
        __trait_bound: $ => choice(
            // TraitBound without generics associated.
            $.identifier_or_path_no_turbofish,
            // TraitBound with generics needs to be wrapped in a CST node.
            $.generic,
        ),
        // [[file:noir_grammar.org::trait_body]]
        __trait_declaration_list: $ => seq(
            '{',
            // OuterDocComments are extras.
            repeat(
                // Inlined Noirc: TraitItem.
                choice(
                    $.trait_type,
                    $.trait_constant,
                    $.trait_function,
                ),
            ),
            '}',
        ),
        // [[file:noir_grammar.org::trait_type]]
        trait_type: $ => seq(
            'type',
            field('name', $.identifier),
            ';',
        ),
        // [[file:noir_grammar.org::trait_constant]]
        trait_constant: $ => seq(
            $.tmp__let_to_type,
            optional(seq(
                '=', // We don't want '=' part of the CST node for the (default) value.
                field('value', $._expression),
            )),
            ';',
        ),
        // [[file:noir_grammar.org::trait_function]]
        where_clause: $ => seq(
            'where',
            sepBy($.where_constraint, ','), // Inlined Noirc: WhereClauseItems.
            optional(',')
        ),
        // [[file:noir_grammar.org::where_clause]]
        where_constraint: $ => seq(
            field('type', $._type),
            field('bounds', $.trait_bounds),
        ),

        // * * * * * * * * * * * * * * * * * * * * * * * * * STATEMENT KINDS (AST)
        // TODO: Consider all Noirc 'statements' except we enforce trailing semicolon where required? Or just have a statements section idk yet.
        
        // [[file:noir_grammar.org::statement]]
        _statement: $ => seq(
            // TODO: Attributes.
            choice(
                // Inlined Noirc: StatementKind.
                $.break_statement,
                $.continue_statement,
                $.return_statement,
                $.let_statement,
                $.constrain_statement,
                $.comptime_statement,
                $.for_statement,
                $.if_expression,
                $.block,
                $.assign_statement,
                $.expression_statement,
            ),
        ),
        
        // [[file:noir_grammar.org::break_statement]]
        _expression: $ => prec(1, choice(
            $.binary_expression,
            // Inlined Noirc: Atom.
            $.__literal,
              // Inlined Noirc: ParenthesesExpression.
              alias($.unit_type, $.unit_expression),
              $.parenthesized_expression,
              $.tuple_expression,
            $.unsafe_block,
              // Inlined Noirc: PathExpression.
              $.path, // Inlined Noirc: VariableExpression.
              $.struct_expression,
            $.if_expression,
            $.lambda,
            // ---/ End: Atom.
            // TODO: SURELY identifier is allowed in expression, where's the concrete evidence though? Assuming it is for now.
            $.identifier,
        )),
        
        // [[file:noir_grammar.org::binary_expression]]
        block: $ => seq(
            '{',
            repeat($._statement),
            optional($._expression),
            '}',
        ),
        
        // [[file:noir_grammar.org::arguments]]
        _type: $ => choice(
            $.primitive_type,
            $._parentheses_type,
            // $.array_or_slice_type,
            // $.mutable_reference_type,
            // $.function_type,
            // TODO: TraitAsType, AsTraitPathType, UnresolvedNamedType
            $.identifier_or_path_no_turbofish,
        ),
        
        // [[file:noir_grammar.org::type_annotation]]
        primitive_type: $ => choice(
            $.__field_type,
            $.__integer_type,
            $.__bool_type,
            $.__string_type,
            $.__format_string_type,
        ),
        // [[file:noir_grammar.org::field_type]]
        __field_type: _ => 'Field',
        // [[file:noir_grammar.org::int_type]]
        __integer_type: _ => choice(...INTEGER_TYPES),
        // [[file:noir_grammar.org::bool_type]]
        __bool_type: _ => 'bool',
        // [[file:noir_grammar.org::str_type]]
        __string_type: $ => seq(
            'str',
            '<',
            // TODO: TypeExpression goes here.
            '>',
        ),
        // [[file:noir_grammar.org::fmt_str_type]]
        __format_string_type: _ => 'fmtstr',
        
        // [[file:noir_grammar.org::parentheses_type]]
        unit_type: _ => seq('(', ')'),
        // [[file:noir_grammar.org::tuple_type]]
        constrained_type: $ => $.tmp__let_to_type,
        
        // [[file:noir_grammar.org::generic_type]]
        _generic_parameters: $ => alias($._generics, $.type_parameters),
        // [[file:noir_grammar.org::generic_type_parameters]]
        _generic_type_parameters: $ => alias($._generic_type_args, $.type_parameters),
        
        // [[file:noir_grammar.org::tmp__let_to_type]]
        int_literal: _ => token(seq(
            choice(
                /[0-9][0-9_]*/,
                /0x[0-9a-fA-F_]+/,
            )
        )),
        
        // [[file:noir_grammar.org::str]]
        __line_comment_doc_style: $ => choice(
            alias($.__inner_line_comment_doc_style, $.inner_doc_style),
            alias($.__outer_line_comment_doc_style, $.outer_doc_style),
        ),
        // [[file:noir_grammar.org::line_comment]]
        line_comment: $ => seq(
            '//',
            choice(
                // Four forward-slashes is still a normal line comment, not an outer-style.
                seq(token.immediate(prec(2, '//')), /.*/),
                seq(
                    field('style', $.__line_comment_doc_style),
                    field('content', alias(/.*/, $.doc_comment)),
                ),
                /.*/,
            ),
        ),
        
        // [[file:noir_grammar.org::block_comment__doc_style]]
        path: $ => seq(
            field('scope', choice(
                $.path,
                $.identifier,
                $.__path_kind,
            )),
            '::',
            choice(
                field('type_parameters', $._generic_type_parameters),
                field('name', $.identifier),
            ),
        ),
        // [[file:noir_grammar.org::identifier_or_path]]
        __path_kind: $ => choice($.crate, $.dep, $.super),
        
        // [[file:noir_grammar.org::identifier]]
        identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
        
        // Modifiers except for visibility (in order).
        
        // [[file:noir_grammar.org::modifier_mut]]
        crate: _ => 'crate',
        dep: _ => 'dep',
        super: _ => 'super',
    },
})

// Match one or more occurrences of rule separated by sep.
function sepBy1(rule, sep) {
    return seq(rule, repeat(seq(sep, rule)))
}

// Match zero or more occurrences of rule separated by sep.
function sepBy(rule, sep) {
    return optional(sepBy1(rule, sep))
}
